--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -61,17 +61,11 @@ services:
     volumes:
       - mongodb_data:/data/db
       - ./mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js:ro
+      - ./mongo-init.sh:/docker-entrypoint-initdb.d/mongo-init.sh:ro
     command:
-      [
-        "--replSet",
-        "rs0",
-        "--bind_ip_all",
-        "--auth",
-        "--wiredTigerCacheSizeGB",
-        "0.25",
-      ]
+      ["--replSet", "rs0", "--bind_ip_all", "--wiredTigerCacheSizeGB", "0.25"]
     healthcheck:
-      test: mongosh --eval "try { if(rs.status().ok) { quit(0) } else { rs.initiate({_id:'rs0',members:[{_id:0,host:'mongodb:27017'}]}); quit(0) } } catch(e) { rs.initiate({_id:'rs0',members:[{_id:0,host:'mongodb:27017'}]}); quit(0) }"
+      test: mongosh --eval "try { if(rs.status().ok) { quit(0) } else { quit(1) } } catch(e) { quit(1) }"
       interval: 10s
       timeout: 5s
       retries: 5
