--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -62,8 +62,17 @@ services:
       - mongodb_data:/data/db
       - ./mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js:ro
       - ./mongo-init.sh:/docker-entrypoint-initdb.d/mongo-init.sh:ro
+      - ./mongo-keyfile:/data/mongodb/keyfile:ro
     command:
-      ["--replSet", "rs0", "--bind_ip_all", "--wiredTigerCacheSizeGB", "0.25"]
+      [
+        "--replSet",
+        "rs0",
+        "--bind_ip_all",
+        "--wiredTigerCacheSizeGB",
+        "0.25",
+        "--keyFile",
+        "/data/mongodb/keyfile",
+      ]
     healthcheck:
       test: mongosh --eval "try { if(rs.status().ok) { quit(0) } else { quit(1) } } catch(e) { quit(1) }"
       interval: 10s
