--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,8 +8,11 @@ services:
     ports:
       - "3000:3000"
     environment:
-      - REACT_APP_API_URL=${REACT_APP_API_URL:-http://localhost}
-      - NODE_ENV=production
+      - REACT_APP_API_URL=${REACT_APP_API_URL:-http://localhost/api}
+      - NODE_ENV=development
+    volumes:
+      - ./frontend:/app
+      - /app/node_modules
     depends_on:
       - backend
     networks:
@@ -23,13 +26,13 @@ services:
     expose:
       - "5000"
     environment:
-      - MONGODB_URI=mongodb://${MONGO_INITDB_ROOT_USERNAME}:${MONGO_INITDB_ROOT_PASSWORD}@mongodb:27017/hospital_dashboard?replicaSet=rs0&authSource=admin&directConnection=true&serverSelectionTimeoutMS=5000&connectTimeoutMS=5000&socketTimeoutMS=5000
-      - KAFKA_BOOTSTRAP_SERVERS=kafka:9092
+      - MONGODB_URI=${MONGODB_URI}
+      - KAFKA_BOOTSTRAP_SERVERS=${KAFKA_BOOTSTRAP_SERVERS}
       - SECRET_KEY=${SECRET_KEY}
       - JWT_SECRET_KEY=${JWT_SECRET_KEY}
       - FLASK_APP=app.py
-      - FLASK_ENV=production
-      - CORS_ALLOWED_ORIGINS=${CORS_ALLOWED_ORIGINS:-*}
+      - FLASK_ENV=development
+      - CORS_ALLOWED_ORIGINS=${CORS_ALLOWED_ORIGINS}
     depends_on:
       mongodb:
         condition: service_healthy
@@ -50,7 +53,8 @@ services:
       start_period: 40s
 
   mongodb:
-    image: mongodb/mongodb-community-server:latest
+    image: mongo:6.0
+    container_name: mongodb
     ports:
       - "27017:27017"
     environment:
@@ -59,16 +63,15 @@ services:
     volumes:
       - mongodb_data:/data/db
       - ./mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js:ro
-    command: ["--replSet", "rs0", "--bind_ip_all", "--auth"]
     healthcheck:
-      test: mongosh --eval "try { rs.status() } catch (err) { rs.initiate({_id:'rs0',members:[{_id:0,host:'mongodb:27017'}]}) }"
-      interval: 10s
-      timeout: 5s
-      retries: 5
+      test: echo 'db.runCommand("ping").ok' | mongosh localhost:27017/test --quiet
+      interval: 5s
+      timeout: 30s
+      retries: 30
       start_period: 40s
     networks:
       - app-network
-    restart: unless-stopped
+    restart: always
 
   zookeeper:
     image: confluentinc/cp-zookeeper:7.3.0
@@ -105,9 +108,8 @@ services:
     ports:
       - "80:80"
     volumes:
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
       - ./frontend/build:/usr/share/nginx/html:ro
-      - ./nginx/ssl:/etc/nginx/ssl:ro
     depends_on:
       - frontend
       - backend
