--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,3 +1,24 @@
+# Development stage
+FROM node:18-alpine
+
+# Set working directory
+WORKDIR /app
+
+# Copy package files
+COPY package*.json ./
+
+# Install dependencies
+RUN npm install
+
+# Copy source code and public files
+COPY . .
+
+# Expose port
+EXPOSE 3000
+
+# Start development server
+CMD ["npm", "start"]
+
 # Build stage
 FROM node:18-alpine as build
 
